# biosciences-architecture

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: speckit-standard-prompt.md
ra_agents/: __init__.py  registry.py
ra_agents/architecture/: analyzer.json  dependency_mapper.json  doc_writer.json  migration_advisor.json  optimization_advisor.json  synthesis_writer.json
ra_agents/review/: accuracy_auditor.json  adr_compliance_checker.json  gap_analyst.json  strategy_advisor.json
ra_agents/ux/: ia_architect.json  prototype_developer.json  ui_designer.json  ux_researcher.json
ra_orchestrators/: .gitignore-template  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  __init__.py  architecture.py  architecture_orchestrator.py  base_orchestrator.py  claude-agents-research.md  review_orchestrator.py  ux_orchestrator.py  workspace_orchestrator.py
ra_tools/: README.md  __init__.py  figma_integration.py  mcp_registry.py  pulumi_integration.py
workspace_architecture_20260301/: README.md
workspace_architecture_20260301/diagrams/: 01_layer_architecture.md  02_dependency_graph.md  03_data_flow.md
workspace_architecture_20260301/docs/: 01_repo_catalog.md  02_agent_ownership.md  03_dependency_map.md  04_technology_stack.md  05_migration_status.md
